--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "firebase": "^9.16.0",
     "firebase-admin": "^11.4.1"
   },
   "devDependencies": {
